[package]
name = "futures_study"
version = "0.1.0"
authors = ["Jordao Rosario <jordao.rosario01@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
